src/test/deca/context/invalid/super_sans_superclasse.deca
// Description :
// Utilisation de super sans heritage ...

// Resultats :
// Echec

class Defense {
    int degager() {
        return super.degager();
    }
}

{ }
